Sprint 9 - Film & User controllers - fixes (after code review)